文字截取问题

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -60,7 +60,7 @@
                         <div class="xui-inner-img">
                             <img src="{{ product.thumbnails_url }}">
                         </div>
-                        <h3 class="xt-productName">{{ product.name|truncatechars:16 }}</h3>
+                        <h3 class="xt-productName">{{ product.name }}</h3>
                         <p class="xt-productPrice">￥{{ product.display_price | floatformat:2}}</p>
 
                     </a>
