修改页尾微信号相关描述

--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -150,11 +150,11 @@
 <div class="footer xui-footer">
 	<div class="xui-content">
 		<div class="xui-i" style="">
-			<p style="color:#cd0205">系统负责人：010-50948901&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;系统服务号：2575261826</p>
+			<p style="color:#cd0205">系统负责人：010-50948901&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;系统服务微信号：2575261826</p>
 			<p>Copyright&nbsp;&copy; 2012-2015 weizoom.com 微众传媒 版权所有&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.weizoom.com">微众传媒</a> 旗下微众云商通</p>
 		</div>
 		<div class="xui-i">
-			<img width="80" height="80" src="/static_v2/img/editor/sys_QRcode.jpg" class="fl"><span class="fl mt20 ml10 xui-greyColor">扫码关注<br>服务号</span>
+			<img width="80" height="80" src="/static_v2/img/editor/sys_QRcode.jpg" class="fl"><span class="fl mt20 ml10 xui-greyColor">扫码添加<br>微信号</span>
 		</div>
 	</div>
 </div>
