--- a/weapp/mall/templates/mall/editor/edit_pay_interface.html
+++ b/weapp/mall/templates/mall/editor/edit_pay_interface.html
@@ -94,7 +94,7 @@
 					<div class="form-group">
 						<label class="control-label col-sm-3" for="api_key" style="padding-top:2px;">APIKEY密钥：</label>
 						<div class="col-sm-4">
-							<input type="text" class="form-control" id="api_key" name="api_key" value="{% if weixin_pay_config.pay_version == 1 %}{{ weixin_pay_config.partner_key }}{% endif %}" data-validate="require-string" minLength="1" maxLength="32"/>
+							<input type="text" class="form-control" id="api_key" name="api_key" value="{% if weixin_pay_config.pay_version == 1 %}{{ weixin_pay_config.partner_key }}{% endif %}" data-validate="require-length" strlength="32"/>
 							<span>
 								<a href='http://pay.weixin.qq.com' target='_blank'>微信商户平台获取</a>
 								<span>
