--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -143,6 +143,28 @@
         .xui-propertyView-app-ShareGroup Button.xui-removeImageButton{
             display: none;
         }
+        .xui-propertyView-app-ReplyGroup .propertyGroup_property_horizontalField .propertyGroup_property_input span{
+            color:#0D5F87 !important;
+        }
+        .xui-keywordBoxDiv{
+            border: #DDDDDD solid 1px;
+            background-color: #FFFFFF;
+            padding-top: 21px;
+            padding-left: 18px;
+            margin-right: 10px;
+            margin-left: 20px;
+            height: 175px !important;
+            width: 300px !important;
+            display: none;
+        }
+        .xui-keywordBoxDiv .xui-save{
+            background: none repeat scroll 0 0 #1E8F19;
+            border: 1px solid #1E8F19;
+        }
+        .xui-keywordBoxDiv .xui-newKeyView.pa{
+            margin-left: 10px;
+            margin-right: 20px;
+        }
 
     </style>
 {% endblock %}
