--- a/weapp/apps/app_template/templates/editor/workbench_template.html
+++ b/weapp/apps/app_template/templates/editor/workbench_template.html
@@ -33,31 +33,34 @@ __STRIPPER_TAG__
         </div>
       </div>
     </div>
-    <div id="rightPanel" class="fl xui-workbench-rightPanel xui-hide mb30">
+    <div id="rightPanel" class="fl xui-workbench-rightPanel xui-hide" style="margin-bottom: 90px;">
     </div>
+
+    <div class="xui-bottomActionBar xa-stickyBar">
+        <% if not {{resource.lower_name}} %>
+            <button class="xa-save btn btn-primary">保存</button>
+            <button class="xa-preview btn btn-default ml20">预览</button>
+        <% else %>
+            <% if {{resource.lower_name}}.status_text == "未开始" %>
+                <button class="xa-save btn btn-primary">保存</button>
+                <button class="xa-preview btn btn-default ml20">预览</button>
+            <% endif %>
+            <% if {{resource.lower_name}}.status_text == "进行中" %>
+                进行中，不可更改
+            <% endif %>
+            <% if {{resource.lower_name}}.status_text == "已结束" %>
+                已结束，不可更改
+            <% endif %>
+        <% endif %>
+    </div>
+
   </div>
 </div>
 <% endblock %>
 
 __STRIPPER_TAG__
 <% block global_elements %>
-<div class="xui-bottomActionBar">
-  <% if not {{resource.lower_name}} %>
-    <button class="xa-save btn btn-primary">保存</button>
-    <button class="xa-preview btn btn-default ml20">预览</button>
-  <% else %>
-    <% if {{resource.lower_name}}.status_text == "未开始" %>
-    <button class="xa-save btn btn-primary">保存</button>
-    <button class="xa-preview btn btn-default ml20">预览</button>
-    <% endif %>
-    <% if {{resource.lower_name}}.status_text == "进行中" %>
-    进行中，不可更改
-    <% endif %>
-    <% if {{resource.lower_name}}.status_text == "已结束" %>
-    已结束，不可更改
-    <% endif %>
-  <% endif %>
-</div>
+
 <% endblock %>
 
 __STRIPPER_TAG__
@@ -174,7 +177,7 @@ __STRIPPER_TAG__
             "name": name,
             "start_time": startTime,
             "end_time": endTime
-          }
+          };
           if (isCreateNewData) {
             var method = 'put';
             args['related_page_id'] = relatedPageId;
@@ -254,6 +257,22 @@ __STRIPPER_TAG__
         // 点击空白处，触发事件
         W.Broadcaster.trigger('designpage:cancel_delete');
       });
+        // 滚动浮动在底部
+          var stickyMenu = function(){
+              var winScrollTop = $(window).scrollTop();
+          　　var scrollHeight = $(document).height();
+          　　var windowHeight = $(window).height();
+              var gap = scrollHeight - winScrollTop - windowHeight;
+              if( gap < 44 ){
+                  $('.xa-stickyBar').css({ 'position': 'absolute'}).removeClass('fxd');
+              }else{
+                  $('.xa-stickyBar').css({ 'position': 'fixed' }).addClass('fxd');
+              }
+          };
+          stickyMenu();
+          $(window).bind('scroll resize',(function() {
+              stickyMenu();
+          }));
     });
   </script>
 <% block js %><% endblock %>
