隐藏帮助中心、系统通知入口
修复多标签页一个退出后，刷新另外一个页面进入weapp登陆页面

统一一级域名dev.com，开启消息中心

修改settings中FANS_HOST配置

添加系统更新手工测试文件夹

系统更新测试点

系统更新测试点

修改base的系统更新链接

退出跳转到FAN_HOST，优化account.view:清理登录登出、绑定公众号相关代码

跨域文件添加

打开权限开关

系统通知信息提示

解决图片上传空格的问题

跨域问题修复

控制权限管理入口显示

update

添加帮助中心入口

添加帮助中心入口，去掉多余/

帮助中心入口样式调整

--- a/weapp/account/templates/account/sub_account_lists.html
+++ b/weapp/account/templates/account/sub_account_lists.html
@@ -20,7 +20,7 @@
 {% block content-panel %}
 <div class="relative">
 	<ul class="breadcrumb">
-		<li><a href="/account/">帐号信息</a><span class="divider">/</span></li>
+		<li><a href="/account/accounts/">帐号信息</a><span class="divider">/</span></li>
 		<li class="active">员工账号管理</li>
 	</ul>
 	{% if is_can_create %}
