--- a/weapp/account/templates/account/edit_sub_account.html
+++ b/weapp/account/templates/account/edit_sub_account.html
@@ -7,7 +7,7 @@
 
 {% block content-panel %}
 <ul class="breadcrumb">
-	<li><a href="/account/">帐号信息</a><span class="divider">/</span></li>
+	<li><a href="/account/accounts/">帐号信息</a><span class="divider">/</span></li>
 	<li><a href="/account/sub_users/">员工帐号管理</a><span class="divider">/</span></li>
 	<li class="active">添加员工帐号</li>
 </ul>
