--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -146,17 +146,40 @@
         .xui-propertyView-app-ReplyGroup .propertyGroup_property_horizontalField .propertyGroup_property_input span{
             color:#0D5F87 !important;
         }
-        .xui-keywordBoxDiv{
-            border: #DDDDDD solid 1px;
-            background-color: #FFFFFF;
-            padding-top: 21px;
-            padding-left: 18px;
-            margin-right: 10px;
-            margin-left: 20px;
-            height: 175px !important;
-            width: 300px !important;
-            display: none;
+        .xui-keywordBoxDiv .xui-newKeyView {
+            width: 360px;
+            border:1px solid #ccc;
+            background-color: #fff;
+
         }
+        .xui-keywordBoxDiv .xui-newKeyView .xui-key {
+            width: 100%;
+            height: 100px;
+            padding-top: 20px;
+            border-bottom: 1px solid #ccc;
+            line-height: 30px;
+        }
+        .xui-keywordBoxDiv .xui-newKeyView .xui-key input {
+            vertical-align: sub;
+        }
+        .xui-keywordBoxDiv .xui-newKeyView .xui-show {
+            width: 100%;
+        }
+        .xui-keywordBoxDiv .btn {
+            border-radius: 0px !important;
+        }
+        .xui-keywordBoxDiv .xui-newKeyView .xui-i-left {
+            text-align: right;
+            width: 76px;
+            clear: both;
+            float: left;
+
+        }.xui-keywordBoxDiv .xui-newKeyView .xui-i-right {
+            text-align: left;
+            right: 90px;
+
+        }
+
         .xui-keywordBoxDiv .xui-save{
             background: none repeat scroll 0 0 #1E8F19;
             border: 1px solid #1E8F19;
@@ -295,6 +318,7 @@ ui-appPage-commonStyle">
             <br>
         </script>
     {% endverbatim %}
+    <div class="xui-keywordBoxDiv xa-keywordBoxDiv"></div>
 {% endblock %}
 
 {% block global_elements %}
@@ -362,7 +386,7 @@ ui-appPage-commonStyle">
           alert('Failed to load pages in JSON. Please check it.');
         }
       });
-    }
+    };
     
     $(document).ready(function() {
         table = $('[data-ui-role="advanced-table"]').data('view');
@@ -564,6 +588,23 @@ ui-appPage-commonStyle">
         W.Broadcaster.on('selectwidget:assert', function(cid){
             //初始化弹出层
             $('[data-toggle="popover"]').popover();
+            //自动回复xxxxxxx
+            var prize_keyword_view = new W.view.apps.PrizeKeyword({
+                el:'.xa-keywordBoxDiv'
+            });
+            prize_keyword_view.hide();
+            prize_keyword_view.render();
+
+
+            var add_keyword_btn = $('.xui-propertyView-app-ReplyGroup .propertyGroup_property_horizontalField .propertyGroup_property_input');
+            add_keyword_btn.click(function(){
+                var xx = add_keyword_btn.position().top+30+'px';
+                var yy = add_keyword_btn.position().left+'px';
+                $('.xui-keywordBoxDiv').css({'position':'absolute','top':'1200px','left':'200px'}).show();
+            });
+
+
+
         });
     });
 
