--- a/weapp/static_v2/js/view/apps_prize_selector_v4/template.html
+++ b/weapp/static_v2/js/view/apps_prize_selector_v4/template.html
@@ -10,7 +10,7 @@
 	</div>
 	<div class="ml5 xui-inline xa-selectedCoupon xa-optionTarget {{#if prize.name}}{{else}}xui-hide{{/if}}">
 		<div class="pr xui-i-selectedBox">
-			<span class="xui-i-selected-title xa-couponName">{{prize.name}}</span>
+			<span class="xui-i-selected-title xa-couponName" coupon-id="{{ prize.id }}">{{prize.name}}</span>
 			<button class="close xui-close xa-removeCoupon" style="display:block;opacity:1;line-height:16px;" type="button">×</button>
 			<a href="javascript:void(0);" class="xa-selectCoupon ml5">修改</a>
 			<span style="color:#666666">剩余库存: <span class="xa-couponCount">{{#if prize.count}}{{prize.count}}{{ else }} 0 {{/if}}</span> 件</span>
