--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -607,7 +607,7 @@ ui-appPage-commonStyle">
         <div class="modal-content">
             <div class="modal-header">
                 <button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span class="xui-closeColor" aria-hidden="true">&times;</span></button>
-                <h3 class="modal-title">拿到奖励说明</h3>
+                <h3 class="modal-title">签到奖励说明</h3>
             </div>
 
             <div class="modal-body ml15">
