--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -64,6 +64,7 @@
 
         .wui-TotalPoints {
             color: #FFFD32;
+            margin-left: 10px;
         }
 
         .wui-Rules.Border {
