创建可选商品的促销活动的 商品列表的全选

--- a/weapp/mall/templates/mall/editor/promotion/create_forbidden_coupon_products.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_forbidden_coupon_products.html
@@ -151,7 +151,7 @@
 		</tbody>
 	</table>
 	<div class="mt10" style="padding-left:8px">
-		<input type="checkbox" id="topSelectAll" class="xa-outSelectAll" />
+		<input type="checkbox" id="topSelectAll" class="xa-selectAll" />
 		<label for="topSelectAll" class="xui-topSelectAll">全选</label>
 		<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchDelete">删&nbsp;&nbsp;&nbsp;&nbsp;除</a>
 	</div>	
