--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -396,7 +396,7 @@
             if(flag){
                 $('.wa-sign-btn').hide();
             }else{
-                $('.wa-sign-btn').addClass('animated rotateOutUpRight').one('webkitAnimationEnd animationend', function () {
+                $('.wa-sign-btn').addClass('animated flipOutY').one('webkitAnimationEnd animationend', function () {
                     $(this).hide();
                 });
             }
