--- a/weapp/static_v2/js/view/apps_prize_keyword/template.html
+++ b/weapp/static_v2/js/view/apps_prize_keyword/template.html
@@ -10,7 +10,7 @@
          </div>
          <div class="xui-i-left"><span class="xui-colorRed">*</span> 关键词：</div>
          <div class="xui-i-right">
-            <input type="text"  maxlength=15  data-validate="require-string" data-maxlength="15" data-minlength="1" class="xa-add lh24 w198" placeHolder="输入回车可添加多个关键词"/>
+            <input type="text"  maxlength=15  data-validate="require-string" data-maxlength="15" data-minlength="1" class="xa-app-add lh24 w198" placeHolder="输入回车可添加多个关键词"/>
          </div>
     </div>
     <div class="xui-show xa-keywords">
