--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -604,14 +604,18 @@ ui-appPage-commonStyle">
 
                 //自动回复 xxxxx
                 add_keyword_btn = $('.xui-propertyView-app-ReplyGroup .propertyGroup_property_horizontalField .propertyGroup_property_input');
+                var xx = add_keyword_btn.position().top+50;
+			    var yy = add_keyword_btn.position().left;
+                var offset={top:xx,left:yy};
                 add_keyword_btn.click(function(){
                     prize_keyword_view || (prize_keyword_view = new W.view.apps.PrizeKeyword({
-                    el:'.xa-keywordBoxDiv',
-                    add_btn:'.xui-propertyView-app-ReplyGroup .propertyGroup_property_horizontalField .propertyGroup_property_input'
-                }));
-            });
+                        el:'.xa-keywordBoxDiv',
+                     }));
+                    prize_keyword_view.setPos(offset);
+                    prize_keyword_view.render();
+                });
 
-            flag = false;
+                flag = false;
             }
         });
         // 滚动浮动在底部
