群发页面添加文字注释：群发图文时手机端会显示图文中设置的正文内容！

--- a/weapp/static_v2/js/view/weixin_message_editor/template.html
+++ b/weapp/static_v2/js/view/weixin_message_editor/template.html
@@ -23,7 +23,9 @@
 				</div>
 			</div>
 		</div>
-
+		{{if helptext}}
+   			<p style="  color: red;font-size: 14px;white-space: nowrap;margin-top: 5px;">${helptext}</p>
+   		{{/if}}
 		<div id="weixin-editor-btn" class="mt5 tl">
 			<a href="javascript:void(0);" class="xa-submit btn btn-success xui-weixinMessageBtn">确&nbsp;&nbsp;定</a>
 			<a href="javascript:void(0);" class="xa-cancel btn btn-default ml20">取&nbsp;&nbsp;消</a>
